--- a/archives/toutiao-search/2023-11-07.md
+++ b/archives/toutiao-search/2023-11-07.md
@@ -1,59 +1,76 @@
 # 2023-11-07
 
-共 301 条
+共 314 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 07 2023 18:00:40 GMT+0800 (China Standard Time) -->
-1. [官方通报“医院院长贩卖出生证”](https://so.toutiao.com/search?keyword=官方通报“医院院长贩卖出生证”)
-1. [南方女生穿泳装在雪地里“游泳”](https://so.toutiao.com/search?keyword=南方女生穿泳装在雪地里“游泳”)
-1. [“乌镇峰会” 十年回首再出发](https://so.toutiao.com/search?keyword=“乌镇峰会”+十年回首再出发)
-1. [55岁作家自嘲：退休金1442元花不完](https://so.toutiao.com/search?keyword=55岁作家自嘲：退休金1442元花不完)
-1. [刘强东老家水龙头忘关 网友联系京东](https://so.toutiao.com/search?keyword=刘强东老家水龙头忘关+网友联系京东)
+<!-- 最后更新时间 Tue Nov 07 2023 19:00:47 GMT+0800 (China Standard Time) -->
 1. [董明珠首次回应孟羽童离职](https://so.toutiao.com/search?keyword=董明珠首次回应孟羽童离职)
+1. [官方通报“医院院长贩卖出生证”](https://so.toutiao.com/search?keyword=官方通报“医院院长贩卖出生证”)
+1. [“乌镇峰会” 十年回首再出发](https://so.toutiao.com/search?keyword=“乌镇峰会”+十年回首再出发)
 1. [哈尔滨11月6日降雪量突破历史极值](https://so.toutiao.com/search?keyword=哈尔滨11月6日降雪量突破历史极值)
 1. [黑龙江体育馆坍塌致3人遇难](https://so.toutiao.com/search?keyword=黑龙江体育馆坍塌致3人遇难)
+1. [刘强东老家水龙头忘关 网友联系京东](https://so.toutiao.com/search?keyword=刘强东老家水龙头忘关+网友联系京东)
+1. [南方女生穿泳装在雪地里“游泳”](https://so.toutiao.com/search?keyword=南方女生穿泳装在雪地里“游泳”)
+1. [55岁作家自嘲：退休金1442元花不完](https://so.toutiao.com/search?keyword=55岁作家自嘲：退休金1442元花不完)
 1. [民政部官网在线领取工资补贴？假的](https://so.toutiao.com/search?keyword=民政部官网在线领取工资补贴？假的)
+1. [巴西父亲夺刀刺死威胁其孩子的摊贩](https://so.toutiao.com/search?keyword=巴西父亲夺刀刺死威胁其孩子的摊贩)
+1. [朱丹回应叫错人名结束职业生涯](https://so.toutiao.com/search?keyword=朱丹回应叫错人名结束职业生涯)
 1. [哈尔滨冻成了“哈八滨”](https://so.toutiao.com/search?keyword=哈尔滨冻成了“哈八滨”)
-1. [媒体追问体育馆坍塌：天灾还是人祸](https://so.toutiao.com/search?keyword=媒体追问体育馆坍塌：天灾还是人祸)
-1. [女子称与植物人丈夫生试管婴儿二胎](https://so.toutiao.com/search?keyword=女子称与植物人丈夫生试管婴儿二胎)
-1. [90后夫妻存100万靠利息生活](https://so.toutiao.com/search?keyword=90后夫妻存100万靠利息生活)
 1. [专家：全国房价泡沫终于挤完了](https://so.toutiao.com/search?keyword=专家：全国房价泡沫终于挤完了)
+1. [男子每天三顿腌制品确诊胃癌晚期](https://so.toutiao.com/search?keyword=男子每天三顿腌制品确诊胃癌晚期)
+1. [女生肚子大被搓澡阿姨救了一命](https://so.toutiao.com/search?keyword=女生肚子大被搓澡阿姨救了一命)
+1. [国内油价三连降加满一箱省5.5元](https://so.toutiao.com/search?keyword=国内油价三连降加满一箱省5.5元)
+1. [90后夫妻存100万靠利息生活](https://so.toutiao.com/search?keyword=90后夫妻存100万靠利息生活)
+1. [多家手机厂商取消5G开关设置](https://so.toutiao.com/search?keyword=多家手机厂商取消5G开关设置)
+1. [雄安12万农民进城记](https://so.toutiao.com/search?keyword=雄安12万农民进城记)
+1. [七国集团外长会议将在东京举行](https://so.toutiao.com/search?keyword=七国集团外长会议将在东京举行)
+1. [古特雷斯谈巴以冲突：一场人性危机](https://so.toutiao.com/search?keyword=古特雷斯谈巴以冲突：一场人性危机)
+1. [卖出生证女院长疑有非法引产前科](https://so.toutiao.com/search?keyword=卖出生证女院长疑有非法引产前科)
+1. [以色列订购的武器让美国官员担心](https://so.toutiao.com/search?keyword=以色列订购的武器让美国官员担心)
+1. [外交部回应冯德莱恩涉巴以冲突言论](https://so.toutiao.com/search?keyword=外交部回应冯德莱恩涉巴以冲突言论)
+1. [人民网评院长被指倒卖出生证明](https://so.toutiao.com/search?keyword=人民网评院长被指倒卖出生证明)
+1. [美国动用70架运输机向以色列送军火](https://so.toutiao.com/search?keyword=美国动用70架运输机向以色列送军火)
+1. [哈马斯称巴以冲突已致48名记者丧生](https://so.toutiao.com/search?keyword=哈马斯称巴以冲突已致48名记者丧生)
+1. [巴勒斯坦总理开会发言一度哽咽失声](https://so.toutiao.com/search?keyword=巴勒斯坦总理开会发言一度哽咽失声)
+1. [一火箭弹落入以色列居民区画面曝光](https://so.toutiao.com/search?keyword=一火箭弹落入以色列居民区画面曝光)
+1. [媒体追问体育馆坍塌：天灾还是人祸](https://so.toutiao.com/search?keyword=媒体追问体育馆坍塌：天灾还是人祸)
+1. [医院倒卖出生证明院长被带走调查](https://so.toutiao.com/search?keyword=医院倒卖出生证明院长被带走调查)
+1. [中山二院辟谣乳腺外科团队学生患癌](https://so.toutiao.com/search?keyword=中山二院辟谣乳腺外科团队学生患癌)
+1. [台名嘴谈解放军驱离外国军机军舰](https://so.toutiao.com/search?keyword=台名嘴谈解放军驱离外国军机军舰)
+1. [小鹏汽车晒AEB成绩单](https://so.toutiao.com/search?keyword=小鹏汽车晒AEB成绩单)
+1. [四川农村宅基地新规权威解读来了](https://so.toutiao.com/search?keyword=四川农村宅基地新规权威解读来了)
+1. [王鹤棣晒晚餐](https://so.toutiao.com/search?keyword=王鹤棣晒晚餐)
+1. [小鹏再反击：吵不过就直接上成绩单](https://so.toutiao.com/search?keyword=小鹏再反击：吵不过就直接上成绩单)
+1. [冬天里的第一杯炒酸奶](https://so.toutiao.com/search?keyword=冬天里的第一杯炒酸奶)
+1. [市场监管总局：10批食品抽检不合格](https://so.toutiao.com/search?keyword=市场监管总局：10批食品抽检不合格)
+1. [哈工大回应学生上课像登机](https://so.toutiao.com/search?keyword=哈工大回应学生上课像登机)
+1. [巴以冲突后为何印度也躁动](https://so.toutiao.com/search?keyword=巴以冲突后为何印度也躁动)
+1. [AEB到底是什么](https://so.toutiao.com/search?keyword=AEB到底是什么)
+1. [国际油价6日上涨](https://so.toutiao.com/search?keyword=国际油价6日上涨)
+1. [女子转卖父母生前处方药被判贩毒罪](https://so.toutiao.com/search?keyword=女子转卖父母生前处方药被判贩毒罪)
+1. [司机车停小区口看到来车慢悠悠聊天](https://so.toutiao.com/search?keyword=司机车停小区口看到来车慢悠悠聊天)
+1. [以军已投掷1.8万吨炸药](https://so.toutiao.com/search?keyword=以军已投掷1.8万吨炸药)
+1. [华盛顿爆发大规模反战游行](https://so.toutiao.com/search?keyword=华盛顿爆发大规模反战游行)
 1. [李宁透露将处罚Scout和Tarzan](https://so.toutiao.com/search?keyword=李宁透露将处罚Scout和Tarzan)
+1. [研究员：关于改善房企风险四点建议](https://so.toutiao.com/search?keyword=研究员：关于改善房企风险四点建议)
+1. [国道江苏宿淮站获批收费意味着什么](https://so.toutiao.com/search?keyword=国道江苏宿淮站获批收费意味着什么)
+1. [女子称与植物人丈夫生试管婴儿二胎](https://so.toutiao.com/search?keyword=女子称与植物人丈夫生试管婴儿二胎)
 1. [辽宁铁岭雪中世界宛如水墨画卷](https://so.toutiao.com/search?keyword=辽宁铁岭雪中世界宛如水墨画卷)
 1. [35岁女子在香港做泥瓦工月入10万](https://so.toutiao.com/search?keyword=35岁女子在香港做泥瓦工月入10万)
 1. [哈姆：詹姆斯那么多次被打不吹](https://so.toutiao.com/search?keyword=哈姆：詹姆斯那么多次被打不吹)
-1. [王鹤棣晒晚餐](https://so.toutiao.com/search?keyword=王鹤棣晒晚餐)
-1. [女生肚子大被搓澡阿姨救了一命](https://so.toutiao.com/search?keyword=女生肚子大被搓澡阿姨救了一命)
-1. [古特雷斯谈巴以冲突：一场人性危机](https://so.toutiao.com/search?keyword=古特雷斯谈巴以冲突：一场人性危机)
-1. [卖出生证女院长疑有非法引产前科](https://so.toutiao.com/search?keyword=卖出生证女院长疑有非法引产前科)
-1. [美国动用70架运输机向以色列送军火](https://so.toutiao.com/search?keyword=美国动用70架运输机向以色列送军火)
-1. [一火箭弹落入以色列居民区画面曝光](https://so.toutiao.com/search?keyword=一火箭弹落入以色列居民区画面曝光)
 1. [近十国对以色列采取外交措施](https://so.toutiao.com/search?keyword=近十国对以色列采取外交措施)
-1. [外交部回应冯德莱恩涉巴以冲突言论](https://so.toutiao.com/search?keyword=外交部回应冯德莱恩涉巴以冲突言论)
-1. [以色列订购的武器让美国官员担心](https://so.toutiao.com/search?keyword=以色列订购的武器让美国官员担心)
-1. [人民网评院长被指倒卖出生证明](https://so.toutiao.com/search?keyword=人民网评院长被指倒卖出生证明)
 1. [布林肯参加G7外长会将讨论巴以冲突](https://so.toutiao.com/search?keyword=布林肯参加G7外长会将讨论巴以冲突)
 1. [以军称“加大了对加沙城内的压力”](https://so.toutiao.com/search?keyword=以军称“加大了对加沙城内的压力”)
-1. [医院倒卖出生证明院长被带走调查](https://so.toutiao.com/search?keyword=医院倒卖出生证明院长被带走调查)
-1. [中山二院辟谣乳腺外科团队学生患癌](https://so.toutiao.com/search?keyword=中山二院辟谣乳腺外科团队学生患癌)
 1. [刘诗诗宛如优雅黑天鹅](https://so.toutiao.com/search?keyword=刘诗诗宛如优雅黑天鹅)
 1. [天津相关部门回应暖气为何还不热](https://so.toutiao.com/search?keyword=天津相关部门回应暖气为何还不热)
-1. [巴以冲突后为何印度也躁动](https://so.toutiao.com/search?keyword=巴以冲突后为何印度也躁动)
 1. [厦门街头散落大量百元钞票](https://so.toutiao.com/search?keyword=厦门街头散落大量百元钞票)
 1. [淄博烧烤从业者现在怎么样了](https://so.toutiao.com/search?keyword=淄博烧烤从业者现在怎么样了)
-1. [女子转卖父母生前处方药被判贩毒罪](https://so.toutiao.com/search?keyword=女子转卖父母生前处方药被判贩毒罪)
-1. [雄安12万农民进城记](https://so.toutiao.com/search?keyword=雄安12万农民进城记)
 1. [为何被殖民国家没有三农问题](https://so.toutiao.com/search?keyword=为何被殖民国家没有三农问题)
-1. [冬天里的第一杯炒酸奶](https://so.toutiao.com/search?keyword=冬天里的第一杯炒酸奶)
 1. [小卡谈快船22失误：必须称赞尼克斯](https://so.toutiao.com/search?keyword=小卡谈快船22失误：必须称赞尼克斯)
-1. [四川农村宅基地新规权威解读来了](https://so.toutiao.com/search?keyword=四川农村宅基地新规权威解读来了)
 1. [美方反对人道主义停火 外交部回应](https://so.toutiao.com/search?keyword=美方反对人道主义停火+外交部回应)
-1. [国道江苏宿淮站获批收费意味着什么](https://so.toutiao.com/search?keyword=国道江苏宿淮站获批收费意味着什么)
 1. [福建男子在宾馆疑将妻子打死](https://so.toutiao.com/search?keyword=福建男子在宾馆疑将妻子打死)
 1. [国内媒体：足协中高层纷纷退赃](https://so.toutiao.com/search?keyword=国内媒体：足协中高层纷纷退赃)
-1. [国际油价6日上涨](https://so.toutiao.com/search?keyword=国际油价6日上涨)
 1. [金莎带00后小男友上节目秀恩爱](https://so.toutiao.com/search?keyword=金莎带00后小男友上节目秀恩爱)
-1. [司机车停小区口看到来车慢悠悠聊天](https://so.toutiao.com/search?keyword=司机车停小区口看到来车慢悠悠聊天)
 1. [哈尔滨：大雪中的索菲亚教堂](https://so.toutiao.com/search?keyword=哈尔滨：大雪中的索菲亚教堂)
 1. [长沙知名餐厅被曝突然停业](https://so.toutiao.com/search?keyword=长沙知名餐厅被曝突然停业)
 1. [男子地铁要求让座遭拒坐女子身上](https://so.toutiao.com/search?keyword=男子地铁要求让座遭拒坐女子身上)
@@ -62,7 +79,6 @@
 1. [记者：国足名单唯一隐患或是右后卫](https://so.toutiao.com/search?keyword=记者：国足名单唯一隐患或是右后卫)
 1. [体育馆坍塌时7名初中生在打球](https://so.toutiao.com/search?keyword=体育馆坍塌时7名初中生在打球)
 1. [以军袭击加沙致死人数已过万](https://so.toutiao.com/search?keyword=以军袭击加沙致死人数已过万)
-1. [巴勒斯坦总理开会发言一度哽咽失声](https://so.toutiao.com/search?keyword=巴勒斯坦总理开会发言一度哽咽失声)
 1. [天玑9300端侧运行130亿参数大模型](https://so.toutiao.com/search?keyword=天玑9300端侧运行130亿参数大模型)
 1. [收评：沪指震荡整理微跌](https://so.toutiao.com/search?keyword=收评：沪指震荡整理微跌)
 1. [冷天血压高可以多吃降压药吗](https://so.toutiao.com/search?keyword=冷天血压高可以多吃降压药吗)
@@ -71,7 +87,6 @@
 1. [男子办移民材料 向境外传14份情报](https://so.toutiao.com/search?keyword=男子办移民材料+向境外传14份情报)
 1. [何立峰将访问美国](https://so.toutiao.com/search?keyword=何立峰将访问美国)
 1. [土耳其呼吁立即在加沙实现全面停火](https://so.toutiao.com/search?keyword=土耳其呼吁立即在加沙实现全面停火)
-1. [男子每天三顿腌制品确诊胃癌晚期](https://so.toutiao.com/search?keyword=男子每天三顿腌制品确诊胃癌晚期)
 1. [哈马斯的领导人们都去哪里了](https://so.toutiao.com/search?keyword=哈马斯的领导人们都去哪里了)
 1. [斯诺克国锦赛：丁俊晖胜伯恩斯](https://so.toutiao.com/search?keyword=斯诺克国锦赛：丁俊晖胜伯恩斯)
 1. [俄退出《欧洲常规武装力量条约》](https://so.toutiao.com/search?keyword=俄退出《欧洲常规武装力量条约》)
@@ -111,7 +126,6 @@
 1. [万科会出什么牌穿越周期](https://so.toutiao.com/search?keyword=万科会出什么牌穿越周期)
 1. [特朗普拒绝泽连斯基邀他访乌的提议](https://so.toutiao.com/search?keyword=特朗普拒绝泽连斯基邀他访乌的提议)
 1. [媒体人：扬科维奇弃用艾克森有魄力](https://so.toutiao.com/search?keyword=媒体人：扬科维奇弃用艾克森有魄力)
-1. [华盛顿爆发大规模反战游行](https://so.toutiao.com/search?keyword=华盛顿爆发大规模反战游行)
 1. [布林肯离开中东时称此行取得进展](https://so.toutiao.com/search?keyword=布林肯离开中东时称此行取得进展)
 1. [歼20遇绝美霞光披上金色战甲](https://so.toutiao.com/search?keyword=歼20遇绝美霞光披上金色战甲)
 1. [以军称黎武装组织向以发动猛烈攻击](https://so.toutiao.com/search?keyword=以军称黎武装组织向以发动猛烈攻击)
@@ -202,7 +216,6 @@
 1. [美媒：中国打击“杀猪”活动](https://so.toutiao.com/search?keyword=美媒：中国打击“杀猪”活动)
 1. [两架企图袭美军基地的无人机被击落](https://so.toutiao.com/search?keyword=两架企图袭美军基地的无人机被击落)
 1. [幼儿园厨师做菜的一天](https://so.toutiao.com/search?keyword=幼儿园厨师做菜的一天)
-1. [巴西父亲夺刀刺死威胁其孩子的摊贩](https://so.toutiao.com/search?keyword=巴西父亲夺刀刺死威胁其孩子的摊贩)
 1. [以名人拟赴美放记录哈马斯罪行影片](https://so.toutiao.com/search?keyword=以名人拟赴美放记录哈马斯罪行影片)
 1. [伊朗：美在巴以问题上没有保持中立](https://so.toutiao.com/search?keyword=伊朗：美在巴以问题上没有保持中立)
 1. [仁川联主帅：客战泰山队会更换战略](https://so.toutiao.com/search?keyword=仁川联主帅：客战泰山队会更换战略)
